@@ -7,6 +7,8 @@ This file keeps track of all notable changes to the Slurm Charms.
 Unreleased
 ----------
 
+- added action in slurmd to install MPI (mpich)
+
 0.10.0 - 2022-09-15
 -------------------
 
